fastapi/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: default
  labels:
    app: product-service
spec:
  type: ClusterIP
  selector:
    app: product-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-nodeport
  namespace: default
  labels:
    app: product-service
spec:
  type: NodePort
  selector:
    app: product-service
  ports:
    - name: http
      port: 80
      targetPort: 8000
      nodePort: 30800
      protocol: TCP
